--- a/index.html
+++ b/index.html
@@ -1040,42 +1040,60 @@
                 </div>
             </div>
 
-            <div class="md:w-2/3 p-8">
-                <form id="contactForm" method="POST" class="space-y-6">
-                <input type="hidden" name="formType" value="contact">
-                      <div>
-                        <label for="name" class="block text-sm font-medium text-gray-700 dark:text-gray-300 translatable">Adınız Soyadınız</label>
-                        <input type="text" name="name" id="name" autocomplete="name" required
-                            class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-indigo-600 dark:focus:border-indigo-600 transition duration-150 ease-in-out">
-                    </div>
-                    <div>
-                        <label for="email" class="block text-sm font-medium text-gray-700 dark:text-gray-300 translatable">E-posta Adresiniz</label>
-                        <input type="email" name="email" id="email" autocomplete="email" required
-                             class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-indigo-600 dark:focus:border-indigo-600 transition duration-150 ease-in-out">
-                    </div>
-                                       <div>
-                        <label for="phone" class="block text-sm font-medium text-gray-700 dark:text-gray-300 translatable">Telefon Numaranız (İsteğe Bağlı)</label>
-                        <input type="tel" name="phone" id="phone" autocomplete="tel"
-                             class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-indigo-600 dark:focus:border-indigo-600 transition duration-150 ease-in-out">
-                    </div>
-                    <div>
-                        <label for="subject" class="block text-sm font-medium text-gray-700 dark:text-gray-300 translatable">Konu</label>
-                        <input type="text" name="subject" id="subject" required
-                             class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-indigo-600 dark:focus:border-indigo-600 transition duration-150 ease-in-out">
-                    </div>
-                    <div>
-                        <label for="message" class="block text-sm font-medium text-gray-700 dark:text-gray-300 translatable">Mesajınız</label>
-                        <textarea id="message" name="message" rows="4" required
-                            class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-indigo-600 dark:focus:border-indigo-600 transition duration-150 ease-in-out"></textarea>
-                    </div>
-                    <div>
-                        <button type="submit"
-                            class="w-full flex justify-center py-3 px-6 border border-transparent rounded-md shadow-sm text-lg font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 dark:bg-indigo-700 dark:hover:bg-indigo-800 transition duration-150 ease-in-out translatable">
-                            Gönder
-                        </button>
-                    </div>
-                </form>
-            </div>
+<div class="md:w-2/3 p-8">
+  <form id="contactForm" method="POST" class="space-y-6">
+    <input type="hidden" name="formType" value="contact">
+    <div>
+      <label for="contactName" class="block text-sm font-medium text-gray-700 dark:text-gray-300 translatable">Adınız Soyadınız</label>
+      <input type="text" name="name" id="contactName" autocomplete="name" required
+        class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm 
+               focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 
+               dark:bg-gray-700 dark:border-gray-600 dark:text-white 
+               dark:focus:ring-indigo-600 dark:focus:border-indigo-600 transition duration-150 ease-in-out">
+    </div>
+    <div>
+      <label for="contactEmail" class="block text-sm font-medium text-gray-700 dark:text-gray-300 translatable">E-posta Adresiniz</label>
+      <input type="email" name="email" id="contactEmail" autocomplete="email" required
+        class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm 
+               focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 
+               dark:bg-gray-700 dark:border-gray-600 dark:text-white 
+               dark:focus:ring-indigo-600 dark:focus:border-indigo-600 transition duration-150 ease-in-out">
+    </div>
+    <div>
+      <label for="contactPhone" class="block text-sm font-medium text-gray-700 dark:text-gray-300 translatable">Telefon Numaranız (İsteğe Bağlı)</label>
+      <input type="tel" name="phone" id="contactPhone" autocomplete="tel"
+        class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm 
+               focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 
+               dark:bg-gray-700 dark:border-gray-600 dark:text-white 
+               dark:focus:ring-indigo-600 dark:focus:border-indigo-600 transition duration-150 ease-in-out">
+    </div>
+    <div>
+      <label for="contactSubject" class="block text-sm font-medium text-gray-700 dark:text-gray-300 translatable">Konu</label>
+      <input type="text" name="subject" id="contactSubject" required
+        class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm 
+               focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 
+               dark:bg-gray-700 dark:border-gray-600 dark:text-white 
+               dark:focus:ring-indigo-600 dark:focus:border-indigo-600 transition duration-150 ease-in-out">
+    </div>
+    <div>
+      <label for="contactMessage" class="block text-sm font-medium text-gray-700 dark:text-gray-300 translatable">Mesajınız</label>
+      <textarea id="contactMessage" name="message" rows="4" required
+        class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm 
+               focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 
+               dark:bg-gray-700 dark:border-gray-600 dark:text-white 
+               dark:focus:ring-indigo-600 dark:focus:border-indigo-600 transition duration-150 ease-in-out"></textarea>
+    </div>
+    <div>
+      <button type="submit"
+        class="w-full flex justify-center py-3 px-6 border border-transparent rounded-md shadow-sm 
+               text-lg font-medium text-white bg-indigo-600 hover:bg-indigo-700 
+               focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 
+               dark:bg-indigo-700 dark:hover:bg-indigo-800 transition duration-150 ease-in-out translatable">
+        Gönder
+      </button>
+    </div>
+  </form>
+</div>
         </div>
     </div>
 </section>
@@ -1117,6 +1135,7 @@
       </button>
       <h2 class="text-lg font-semibold mb-4 text-primary translatable">Deneme Erişimi Talep Formu</h2>
       <form id="trialForm" class="space-y-4">
+        <input type="hidden" name="formType" value="trial">
         <input type="text" placeholder="Ad Soyad" class="w-full border p-2 rounded" required>
         <input type="email" placeholder="E-posta" class="w-full border p-2 rounded" required>
         <input type="text" placeholder="Kurum Adı" class="w-full border p-2 rounded">
@@ -1132,6 +1151,7 @@
       </button>
       <h2 class="text-lg font-semibold mb-4 text-primary translatable">Ürün Öneri Formu</h2>
       <form id="suggestionForm" class="space-y-4">
+        <input type="hidden" name="formType" value="suggest">
         <input type="text" placeholder="Ad Soyad" class="w-full border p-2 rounded" required>
         <input type="email" placeholder="E-posta" class="w-full border p-2 rounded" required>
         <input type="text" placeholder="Kurum Adı" class="w-full border p-2 rounded">
