--- a/index.html
+++ b/index.html
@@ -1128,22 +1128,117 @@
 <script src="assets/js/script.js"></script>
 
     
-    <div id="trialModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
-    <div class="bg-white rounded-xl p-6 max-w-md w-full relative shadow-lg">
-      <button onclick="closeModal()" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700">
-        <i class="fas fa-times"></i>
-      </button>
-      <h2 class="text-lg font-semibold mb-4 text-primary translatable">Deneme Erişimi Talep Formu</h2>
-      <form id="trialForm" class="space-y-4">
-        <input type="hidden" name="formType" value="trial">
-        <input type="text" placeholder="Ad Soyad" class="w-full border p-2 rounded" required>
-        <input type="email" placeholder="E-posta" class="w-full border p-2 rounded" required>
-        <input type="text" placeholder="Kurum Adı" class="w-full border p-2 rounded">
-        <textarea placeholder="Talep Detayınız" class="w-full border p-2 rounded h-24"></textarea>
-        <button type="submit" class="bg-primary text-white px-4 py-2 rounded hover:bg-opacity-90 translatable">Gönder</button>
-      </form>
-    </div>
+<!-- Trial Modal -->
+<div id="trialModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
+  <div class="bg-white rounded-xl p-6 max-w-md w-full relative shadow-lg">
+    <button onclick="closeModal()" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700">
+      <i class="fas fa-times"></i>
+    </button>
+    <h2 class="text-lg font-semibold mb-4 text-primary translatable">Deneme Erişimi Talep Formu</h2>
+    <form id="trialForm" class="space-y-4">
+      <input type="hidden" name="formType" value="trial">
+      <input type="text" name="name" placeholder="Ad Soyad" class="w-full border p-2 rounded" required>
+      <input type="email" name="email" placeholder="E-posta" class="w-full border p-2 rounded" required>
+      <input type="text" name="organization" placeholder="Kurum Adı" class="w-full border p-2 rounded">
+      <textarea name="message" placeholder="Talep Detayınız" class="w-full border p-2 rounded h-24"></textarea>
+      <button type="submit" class="bg-primary text-white px-4 py-2 rounded hover:bg-opacity-90 translatable">Gönder</button>
+    </form>
   </div>
+</div>
+
+<!-- Suggestion Modal -->
+<div id="suggestionModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
+  <div class="bg-white rounded-xl p-6 max-w-md w-full relative shadow-lg">
+    <button onclick="closeSuggestionModal()" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700">
+      <i class="fas fa-times"></i>
+    </button>
+    <h2 class="text-lg font-semibold mb-4 text-primary translatable">Ürün Öneri Formu</h2>
+    <form id="suggestionForm" class="space-y-4">
+      <input type="hidden" name="formType" value="suggest">
+      <input type="text" name="name" placeholder="Ad Soyad" class="w-full border p-2 rounded" required>
+      <input type="email" name="email" placeholder="E-posta" class="w-full border p-2 rounded" required>
+      <input type="text" name="organization" placeholder="Kurum Adı" class="w-full border p-2 rounded">
+      <textarea name="message" placeholder="Ürün Öneri Detayınız" class="w-full border p-2 rounded h-24"></textarea>
+      <button type="submit" class="bg-primary text-white px-4 py-2 rounded hover:bg-opacity-90 translatable">Gönder</button>
+    </form>
+  </div>
+</div>
+
+<script>
+  function openModal() {
+    document.getElementById('trialModal').classList.remove('hidden');
+    document.body.classList.add('no-scroll');
+  }
+  function closeModal() {
+    document.getElementById('trialModal').classList.add('hidden');
+    document.body.classList.remove('no-scroll');
+  }
+
+  function openSuggestionModal() {
+    document.getElementById('suggestionModal').classList.remove('hidden');
+    document.body.classList.add('no-scroll');
+  }
+
+  function closeSuggestionModal() {
+    document.getElementById('suggestionModal').classList.add('hidden');
+    document.body.classList.remove('no-scroll');
+  }
+
+  // Form submit handler (contact, trial, suggestion)
+  function handleFormSubmit(formId) {
+    const form = document.getElementById(formId);
+    if (!form) return;
+
+    form.addEventListener("submit", async function(e) {
+      e.preventDefault();
+
+      const formType = this.querySelector('input[name="formType"]').value;
+      const formData = {
+        formType,
+        name: this.querySelector('input[name="name"]').value,
+        email: this.querySelector('input[name="email"]').value,
+        organization: this.querySelector('input[name="organization"]')?.value || "",
+        message: this.querySelector('textarea[name="message"]')?.value || ""
+      };
+
+      const submitBtn = this.querySelector('button[type="submit"]');
+      submitBtn.disabled = true;
+      submitBtn.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Gönderiliyor...';
+
+      try {
+        const response = await fetch("https://form-handler.agursel.workers.dev/", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(formData)
+        });
+
+        const result = await response.json();
+        if (result.success) {
+          submitBtn.innerHTML = 'Gönderildi!';
+          this.reset();
+
+          if (formId === "trialForm") closeModal();
+          if (formId === "suggestionForm") closeSuggestionModal();
+        } else {
+          console.error("Sheets webhook hatası:", result.error);
+          alert(result.error || "Gönderim sırasında hata oluştu.");
+          submitBtn.innerHTML = 'Hata!';
+        }
+      } catch (error) {
+        alert("Bağlantı hatası: " + error.message);
+        submitBtn.innerHTML = 'Gönder';
+      }
+
+      submitBtn.disabled = false;
+    });
+  }
+
+  // Formları bağla
+  handleFormSubmit("contactForm");     // Contact
+  handleFormSubmit("trialForm");       // Trial
+  handleFormSubmit("suggestionForm");  // Suggestion
+</script>
+
   <div id="suggestionModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
     <div class="bg-white rounded-xl p-6 max-w-md w-full relative shadow-lg">
       <button onclick="closeSuggestionModal()" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700">
